
	* gui/Makefile.am: Link with libeutil.

	* gui/ca-trust-dialog.c (ca_trust_dialog_show)
	* gui/cert-trust-dialog.c (cert_trust_dialog_show)
	* gui/certificate-manager.c (certificate_manager_config_control_new)
	* gui/certificate-viewer.c (certificate_viewer_show)
	* gui/e-cert-selector.c (e_cert_selector_new):
	Construct glade file pathname at run-time.

2005-07-28  Mengjie Yu  <meng-jie.yu@sun.com>

	* lib/e-cert-db.c:
	Add reserved field for an empty structure.

	Fixes #311837

2005-07-20  Tor Lillqvist  <tml@novell.com>

	* gui/Makefile.am: Use privsolib so the DLL gets installed in
	bindir on Win32. (See ChangeLog entry in .. from 2005-06-18.) Link
	with libeshell. Use NO_UNDEFINED.

	* lib/Makefile.am: Use privsolib here, too. Link with libeutil and
	CERT_UI_LIBS. Use NO_UNDEFINED.

2005-06-06  JP Rosevear  <jpr@novell.com>

	* lib/e-cert-db.c (install_loadable_roots): pull up missing merge
	from branch

2005-05-06  Sankar P <psankar@novell.com>

	*gui/certificate-manager.c
	Changed cert to certificates
	Fixes #273075
	
2005-03-31  Jeffrey Stedfast  <fejj@novell.com>

	* lib/e-cert-db.c (install_loadable_roots): Copied Mozilla code to
	check if the nssckbi root certs module was too old and if it was,
	delete/unload it.

2005-03-30  Li Yuan  <li.yuan@sun.com>

	* gui/smime-ui.glade:
	add a11y name to Certificates Table
	Fixes #73914

2005-02-21  Not Zed  <NotZed@Ximian.com>

	** See bug #68592
	
	* gui/certificate-manager.c (yourcerts_selection_changed): dont
	pass backup to handle_selection_changed.
	(certificate_manager_config_control_new): disable the backup
	buttons always.

2005-02-23  Hans Petter Jansson  <hpj@novell.com>

	* gui/component.c:
	* lib/e-cert-db.c:
	* lib/e-pkcs12.c: Include <libedataserverui/e-passwords.h>.

2005-02-09  Hans Petter Jansson  <hpj@novell.com>

	* lib/Makefile.am:
	* gui/Makefile.am: Install shared libraries to privlibdir.

2005-02-04  Rodney Dawes  <dobey@novell.com>
